--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link link">
                         <div class="portfolio__img">
-                            <img src="./images/portfolio-images/img-1.jpg" alt="Ноутбук на якому відкрито сайт">
+                            <picture>
+                                <source 
+                                srcset="./images/portfolio-images/img-1.jpg 1x, ./images/portfolio-images/img-1-2x.jpg 2x"
+                                media="(min-width:1200px)">
+                                <source
+                                srcset="./images/portfolio-images/img-1-tab-1x.jpg 1x, ./images/portfolio-images/img-1-tab-2x.jpg 2x"
+                                media="(min-width:768px)">
+                                <source
+                                srcset="./images/portfolio-images/img-1-mob-1x.jpg 1x, ./images/portfolio-images/img-1-mob-2x.jpg 2x"
+                                media="(min-width:480px)">
+                                <img
+                                 src="./images/portfolio-images/img-1.jpg"
+                                 alt="Ноутбук на якому відкрито сайт"
+                                 >
+                            </picture>
                             <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                         </div>
                         <div class="portfolio__text">    
@@ -82,7 +96,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link link">
                             <div class="portfolio__img">
-                                <img src="./images/portfolio-images/img-2.jpg" alt="Стилізоване зображення з баскетболістами" width="370">
+                                <picture>
+                                    <source 
+                                    srcset="./images/portfolio-images/img-2.jpg 1x, ./images/portfolio-images/img-2-2x.jpg 2x"
+                                    media="(min-width:1200px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-2-tab-1x.jpg 1x, ./images/portfolio-images/img-2-tab-2x.jpg 2x"
+                                    media="(min-width:768px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-2-mob-1x.jpg 1x, ./images/portfolio-images/img-2-mob-2x.jpg 2x"
+                                    media="(min-width:480px)">
+                                    <img
+                                     src="./images/portfolio-images/img-2.jpg"
+                                     alt="Стилізоване зображення з баскетболістами"
+                                    >
+                                </picture>
                                 <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                             <div class="portfolio__text"> 
@@ -94,7 +122,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link link">
                             <div class="portfolio__img">
-                                <img src="./images/portfolio-images/img-3.jpg" alt="Лого ресторану на стиліозваному тлі" width="370">
+                                <picture>
+                                    <source 
+                                    srcset="./images/portfolio-images/img-3.jpg 1x, ./images/portfolio-images/img-3-2x.jpg 2x"
+                                    media="(min-width:1200px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-3-tab-1x.jpg 1x, ./images/portfolio-images/img-3-tab-2x.jpg 2x"
+                                    media="(min-width:768px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-3-mob-1x.jpg 1x, ./images/portfolio-images/img-3-mob-2x.jpg 2x"
+                                    media="(min-width:480px)">
+                                    <img
+                                     src="./images/portfolio-images/img-3.jpg"
+                                     alt="Лого ресторану на стиліозваному тлі"
+                                     >
+                                </picture>
                                 <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                             <div class="portfolio__text">
@@ -106,7 +148,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link link">
                             <div class="portfolio__img">
-                                <img src="./images/portfolio-images/img-4.jpg" alt="Акустичні навушники" width="370">
+                                <picture>
+                                    <source 
+                                    srcset="./images/portfolio-images/img-4.jpg 1x, ./images/portfolio-images/img-4-2x.jpg 2x"
+                                    media="(min-width:1200px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-4-tab-1x.jpg 1x, ./images/portfolio-images/img-4-tab-2x.jpg 2x"
+                                    media="(min-width:768px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-4-mob-1x.jpg 1x, ./images/portfolio-images/img-4-mob-2x.jpg 2x"
+                                    media="(min-width:480px)">
+                                    <img
+                                     src="./images/portfolio-images/img-4.jpg"
+                                     alt="Акустичні навушники"
+                                    >
+                                </picture>
                                 <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                             <div class="portfolio__text">
@@ -118,7 +174,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link link">
                             <div class="portfolio__img">
-                                <img src="./images/portfolio-images/img-5.jpg" alt="Дві коробки, білого та коричневого кольору" width="370">
+                                <picture>
+                                    <source 
+                                    srcset="./images/portfolio-images/img-5.jpg 1x, ./images/portfolio-images/img-5-2x.jpg 2x"
+                                    media="(min-width:1200px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-5-tab-1x.jpg 1x, ./images/portfolio-images/img-5-tab-2x.jpg 2x"
+                                    media="(min-width:768px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-5-mob-1x.jpg 1x, ./images/portfolio-images/img-5-mob-2x.jpg 2x"
+                                    media="(min-width:480px)">
+                                    <img
+                                     src="./images/portfolio-images/img-5.jpg"
+                                     alt="Дві коробки, білого та коричневого кольору"
+                                     >
+                                </picture>
                                 <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                             <div class="portfolio__text">
@@ -130,7 +200,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link link">
                             <div class="portfolio__img">
-                                <img src="./images/portfolio-images/img-6.jpg" alt="Монітор ПК з відкритим на ньому сайтом" width="370">
+                                <picture>
+                                    <source 
+                                    srcset="./images/portfolio-images/img-6.jpg 1x, ./images/portfolio-images/img-6-2x.jpg 2x"
+                                    media="(min-width:1200px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-6-tab-1x.jpg 1x, ./images/portfolio-images/img-6-tab-2x.jpg 2x"
+                                    media="(min-width:768px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-6-mob-1x.jpg 1x, ./images/portfolio-images/img-6-mob-2x.jpg 2x"
+                                    media="(min-width:480px)">
+                                    <img
+                                     src="./images/portfolio-images/img-6.jpg"
+                                     alt="Монітор ПК з відкритим на ньому сайтом"
+                                     >
+                                </picture>
                                 <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                             <div class="portfolio__text">
@@ -142,7 +226,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link link">
                             <div class="portfolio__img">
-                                <img src="./images/portfolio-images/img-7.jpg" alt="Журнал" width="370">
+                                <picture>
+                                    <source 
+                                    srcset="./images/portfolio-images/img-7.jpg 1x, ./images/portfolio-images/img-7-2x.jpg 2x"
+                                    media="(min-width:1200px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-7-tab-1x.jpg 1x, ./images/portfolio-images/img-7-tab-2x.jpg 2x"
+                                    media="(min-width:768px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-7-mob-1x.jpg 1x, ./images/portfolio-images/img-7-mob-2x.jpg 2x"
+                                    media="(min-width:480px)">
+                                    <img
+                                     src="./images/portfolio-images/img-7.jpg"
+                                     alt="Журнал"
+                                    >
+                                </picture>
                                 <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                             <div class="portfolio__text">
@@ -154,7 +252,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link link">
                             <div class="portfolio__img">
-                                <img src="./images/portfolio-images/img-8.jpg" alt="Бірка" width="370">
+                                <picture>
+                                    <source 
+                                    srcset="./images/portfolio-images/img-8.jpg 1x, ./images/portfolio-images/img-8-2x.jpg 2x"
+                                    media="(min-width:1200px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-8-tab-1x.jpg 1x, ./images/portfolio-images/img-8-tab-2x.jpg 2x"
+                                    media="(min-width:768px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-8-mob-1x.jpg 1x, ./images/portfolio-images/img-8-mob-2x.jpg 2x"
+                                    media="(min-width:480px)">
+                                    <img
+                                     src="./images/portfolio-images/img-8.jpg"
+                                     alt="Бірка"
+                                    >
+                                </picture>
                                 <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                             <div class="portfolio__text">
@@ -166,7 +278,21 @@
                     <li class="item portfolio__item">
                         <a href="" class="portfolio__link">
                             <div class="portfolio__img">
-                                <img src="./images/portfolio-images/img-9.jpg" alt="Людина працює за комп'ютером" width="370">
+                                <picture>
+                                    <source 
+                                    srcset="./images/portfolio-images/img-9.jpg 1x, ./images/portfolio-images/img-9-2x.jpg 2x"
+                                    media="(min-width:1200px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-9-tab-1x.jpg 1x, ./images/portfolio-images/img-9-tab-2x.jpg 2x"
+                                    media="(min-width:768px)">
+                                    <source
+                                    srcset="./images/portfolio-images/img-9-mob-1x.jpg 1x, ./images/portfolio-images/img-9-mob-2x.jpg 2x"
+                                    media="(min-width:480px)">
+                                    <img
+                                     src="./images/portfolio-images/img-9.jpg"
+                                     alt="Людина працює за комп'ютером"
+                                     >
+                                </picture>
                                 <p class="portfolio__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
                             <div class="portfolio__text">
