--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
         </section>
 
-        <!-- <section class="services section">
+        <section class="services section">
             <div class="container">
                 <h2 class="sction__title">Чим ми займаємося</h2>
                 <ul class="list services-list">
@@ -126,7 +126,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         
         <section class="team section">
             <div class="container">
