--- a/portfolio.html
+++ b/portfolio.html
@@ -276,7 +276,7 @@
                         </a>
                     </li>
                     <li class="item portfolio__item">
-                        <a href="" class="portfolio__link">
+                        <a href="" class="portfolio__link link">
                             <div class="portfolio__img">
                                 <picture>
                                     <source 
