--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
                                 media="(min-width:768px)">
                                 <source
                                 srcset="./images/portfolio-images/img-1-mob-1x.jpg 1x, ./images/portfolio-images/img-1-mob-2x.jpg 2x"
-                                media="(min-width:480px)">
+                                media="(max-width:767px)">
                                 <img
                                  src="./images/portfolio-images/img-1.jpg"
                                  alt="Ноутбук на якому відкрито сайт"
@@ -89,7 +89,7 @@
                         </div>
                         <div class="portfolio__text">    
                             <h2 class="portfolio__title">Технокряк</h2>
-                            <p class="portfolio__unit">Веб-сайт</p>
+                            <p class="portfolio__unit portfolio__unit-padding">Веб-сайт</p>
                         </div>
                     </a>
                     </li>
@@ -105,7 +105,7 @@
                                     media="(min-width:768px)">
                                     <source
                                     srcset="./images/portfolio-images/img-2-mob-1x.jpg 1x, ./images/portfolio-images/img-2-mob-2x.jpg 2x"
-                                    media="(min-width:480px)">
+                                    media="(max-width:767px)">
                                     <img
                                      src="./images/portfolio-images/img-2.jpg"
                                      alt="Стилізоване зображення з баскетболістами"
@@ -131,7 +131,7 @@
                                     media="(min-width:768px)">
                                     <source
                                     srcset="./images/portfolio-images/img-3-mob-1x.jpg 1x, ./images/portfolio-images/img-3-mob-2x.jpg 2x"
-                                    media="(min-width:480px)">
+                                    media="(max-width:767px)">
                                     <img
                                      src="./images/portfolio-images/img-3.jpg"
                                      alt="Лого ресторану на стиліозваному тлі"
@@ -157,7 +157,7 @@
                                     media="(min-width:768px)">
                                     <source
                                     srcset="./images/portfolio-images/img-4-mob-1x.jpg 1x, ./images/portfolio-images/img-4-mob-2x.jpg 2x"
-                                    media="(min-width:480px)">
+                                    media="(max-width:767px)">
                                     <img
                                      src="./images/portfolio-images/img-4.jpg"
                                      alt="Акустичні навушники"
@@ -183,7 +183,7 @@
                                     media="(min-width:768px)">
                                     <source
                                     srcset="./images/portfolio-images/img-5-mob-1x.jpg 1x, ./images/portfolio-images/img-5-mob-2x.jpg 2x"
-                                    media="(min-width:480px)">
+                                    media="(max-width:767px)">
                                     <img
                                      src="./images/portfolio-images/img-5.jpg"
                                      alt="Дві коробки, білого та коричневого кольору"
@@ -209,7 +209,7 @@
                                     media="(min-width:768px)">
                                     <source
                                     srcset="./images/portfolio-images/img-6-mob-1x.jpg 1x, ./images/portfolio-images/img-6-mob-2x.jpg 2x"
-                                    media="(min-width:480px)">
+                                    media="(max-width:767px)">
                                     <img
                                      src="./images/portfolio-images/img-6.jpg"
                                      alt="Монітор ПК з відкритим на ньому сайтом"
@@ -235,7 +235,7 @@
                                     media="(min-width:768px)">
                                     <source
                                     srcset="./images/portfolio-images/img-7-mob-1x.jpg 1x, ./images/portfolio-images/img-7-mob-2x.jpg 2x"
-                                    media="(min-width:480px)">
+                                    media="(max-width:767px)">
                                     <img
                                      src="./images/portfolio-images/img-7.jpg"
                                      alt="Журнал"
@@ -261,7 +261,7 @@
                                     media="(min-width:768px)">
                                     <source
                                     srcset="./images/portfolio-images/img-8-mob-1x.jpg 1x, ./images/portfolio-images/img-8-mob-2x.jpg 2x"
-                                    media="(min-width:480px)">
+                                    media="(max-width:767px)">
                                     <img
                                      src="./images/portfolio-images/img-8.jpg"
                                      alt="Бірка"
@@ -287,7 +287,7 @@
                                     media="(min-width:768px)">
                                     <source
                                     srcset="./images/portfolio-images/img-9-mob-1x.jpg 1x, ./images/portfolio-images/img-9-mob-2x.jpg 2x"
-                                    media="(min-width:480px)">
+                                    media="(max-width:767px)">
                                     <img
                                      src="./images/portfolio-images/img-9.jpg"
                                      alt="Людина працює за комп'ютером"
