--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             media="(min-width: 768px)">
                             <source
                             srcset="./images/mob/team-1-mob-1x.jpg 1x, ./images/mob/team-1-mob-2x.jpg 2x"
-                            media="(min-width: 480px)">
+                            media="(max-width:767px)">
                             <img 
                             src="./images/employee_1.jpg" 
                             alt="Усміхнений чоловік в окулярах та бордовій сорочці"
@@ -198,7 +198,7 @@
                             media="(min-width:768px)">
                             <source
                             srcset="./images/mob/team-2-mob-1x.jpg 1x, ./images/mob/team-2-mob-2x.jpg 2x"
-                            media="(min-width:480px)">
+                            media="(max-width:767px)">
                             <img 
                             src="./images/employee_2.jpg" 
                             alt="Усміхнена жінка в окулярах та чорному жакеті"
@@ -250,7 +250,7 @@
                             media="(min-width:768px)">
                             <source
                             srcset="./images/mob/team-3-mob-1x.jpg 1x, ./images/mob/team-3-mob-2x.jpg 2x"
-                            media="(min-width:480px)">
+                            media="(max-width:767px)">
                             <img 
                             src="./images/employee_3.jpg" 
                             alt="Усміхнений чоловік в блакитній сорочці"
@@ -302,7 +302,7 @@
                             media="(min-width:768px)">
                             <source
                             srcset="./images/mob/team-4-mob-1x.jpg 1x, ./images/mob/team-4-mob-2x.jpg 2x"
-                            media="(min-width:480px)">
+                            media="(max-width:767px)">
                             <img 
                             src="./images/employee_4.jpg" 
                             alt="Усміхнений чоловік в окулярах та чорній футболці"
