--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                 <li class="header-contacts__item"><a href="tel:+380961111111" class="link header-contacts__link">
                     <svg width="10" height="16"  class="contacts-icon"><use href="./images/contacts-icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
             </ul>
-            <button type="button" class="menu-open" data-menu-open>
+            <button type="button" class="menu-open">
                 <svg width="24" height="16"  class="menu__icon"><use href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>                
             </button>
             
-                <div class="mobile-menu is-hidden" data-menu>
+                <div class="mobile-menu menu-is-hidden">
                     <div class="container">
                         <div class="close-btn-container">   
-                            <button type="button" class="menu-close-btn" data-menu-close>
+                            <button type="button" class="menu-close-btn">
                                 <svg class="close menu-close-icon">
                                     <use href="./images/contacts-icons.svg#x"></use>
                                 </svg>
