--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
                 <li class="header-contacts__item"><a href="tel:+380961111111" class="link header-contacts__link">
                     <svg width="10" height="16"  class="contacts-icon"><use href="./images/contacts-icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
             </ul>
-            <button type="button" class="menu-open">
+            <button type="button" class="menu-open js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu">
                 <svg width="24" height="16"  class="menu__icon"><use href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>                
             </button>
             
-                <div class="mobile-menu menu-is-hidden">
+                <div class="mobile-menu js-menu-container" id="mobile-menu">
                     <div class="container">
                         <div class="close-btn-container">   
-                            <button type="button" class="menu-close-btn">
+                            <button type="button" class="menu-close-btn js-close-menu">
                                 <svg class="close menu-close-icon">
                                     <use href="./images/contacts-icons.svg#x"></use>
                                 </svg>
@@ -570,7 +572,13 @@
         
 
     </footer>
+      <script
+        defer
+        src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"
+      ></script>
     <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script> 
+    <script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
