--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- header -->
     <header class="header">
-        <div class="container">
+        <div class="container container__nav">
             <nav class="main-nav">
                 <!-- Logo -->
                 <a href="./index.html" lang="en" class="logo link"><span class="logo__accent">Web</span>Studio</a>
