--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                 </div>
                 <div class="modal__checkbox">
                     <input type="checkbox" name="politic" id="politic" class="modal__politic-check visually-hidden" >
-                    <label for="politic" class="modal__politic-label">Погоджуюся з розсилкою та приймаю  <a href="" class="modal__link">Умови договору</a></label>
+                    <label for="politic" class="modal__politic-label"> <span> Погоджуюся з розсилкою та приймаю  <a href="" class="modal__link">Умови договору</a></span></label>
                 </div>
                 <button type="submit" class="modal__main-btn">Відправити</button>
                 
